# the-game

./: CMakeLists.txt
src/: main.c
